<resources>
    <string name="app_name">Trash Tag Owner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tnC"><u>Accepts Terms and Conditions</u>.</string>
    <string name="underlined_signIn"><u>Sign In</u></string>
    <string name="underlined_signUp"><u>Sign Up</u></string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="welcome">WELCOME!</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="Signing_up">Signing Up...</string>
    <string name="verify_acc">Verify your account</string>
    <string name="verify_msg">Please type the verification code sent to your phone number.</string>
    <string name="underline_tnC"><u>Terms and Conditions</u></string>
    <string name="login_phone">Enter your phone number</string>
    <string name="login_pass">Enter your password</string>
    <string name="login_forgot_pass"><u>Forgot Password?</u></string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_pass_msg">We just need your registered Phone Number to send to reset Password OTP</string>
    <string name="next">Next</string>
    <string name="didnt_rec_code">Received the code?</string>
    <string name="pls_wait">Please wait</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_new_pass">Please Enter New Password</string>
    <string name="change_pass">Change Password</string>
    <string name="hint_autocomplete">Current Marker Address</string>
    <string name="comp_address">Complete Address*</string>
    <string name="address_placeholder_text">House no./Flat no./Floor/Building</string>
    <string name="floor_hint">Floor (Optional)</string>
    <string name="how_to_reach_optional">How to Reach (Optional)</string>
    <string name="default_address_checkbox">Mark as default address</string>
    <string name="request">Request</string>
    <string name="select_all"><u>Select All</u></string>
    <string name="unselect_all"><u>Unselect All</u></string>
    <string name="dashboard">Dashboard</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="you_don_t_have_any_pending_request">You don\'t have any Pending Request</string>
    <string name="assign_pickup_agent">Assign Pickup Agent</string>
    <string name="pick_up_agents">Pick-up Agents</string>
    <string name="you_don_t_have_any_pickup_agent">You don\'t have any Pickup Agent</string>
    <string name="number_of_pickups">Number of pickups</string>
    <string name="weight_picked_up">Weight Picked Up</string>
    <string name="register_pick_up_agent">Register Pick-up Agent</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_aadhar_card">Upload Aadhar Card</string>
    <string name="submit">Submit</string>
    <string name="requests">Requests</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="request_date">Request Date :-</string>
    <string name="request_time">Request Time :-</string>
    <string name="logout">Logout</string>
</resources>