<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider_color"
    tools:context=".Activity.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteTransparent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:src="@drawable/product_logo"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImage"
            android:layout_marginStart="20dp"
            android:text="@string/welcome_back"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/errorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:background="@color/colorWhiteTransparent"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/signup_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@id/errorTV"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/login_phone"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:paddingStart="30dp"
                    android:background="@drawable/input_text_border"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/login_pass"
                app:passwordToggleDrawable="@drawable/password_toggler"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/input_text_border"
                    android:paddingStart="30dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_pass"
            android:layout_below="@id/signup_form_layout"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textColor="@color/colorAccent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/forgot_password_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/signIn"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/elevated_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signInButton"
            android:layout_centerHorizontal="true"
            android:text="@string/underlined_signUp"
            android:clickable="true"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:background="@color/colorWhiteTransparent"/>


    </RelativeLayout>

</ScrollView>