<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider_color"
        android:visibility="visible">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/product_logo" />

        <TextView
            android:id="@+id/forPassTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImage"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contentTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forPassTV"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/forgot_pass_msg"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/errorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contentTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_number_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/errorTV"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_text_border"
            android:drawableLeft="@drawable/ic_baseline_smartphone_24"
            android:gravity="center"
            android:hint="Phone number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/secondary_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextFirstButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/phone_number_forgot_password"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/elevated_button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/divider_color"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="100dp"
            android:src="@drawable/product_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/verify_acc"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/verify_msg"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorWhiteTransparent">

            <EditText
                android:id="@+id/editTextOne"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorAccent"
                android:nextFocusRight="@id/editTextTwo"
                android:background="@drawable/white_border_edit"
                android:gravity="center"/>
            <requestFocus/>
            <EditText
                android:id="@+id/editTextTwo"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/white_border_edit"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editTextThree"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/white_border_edit"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editTextFour"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/white_border_edit"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editTextFive"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/white_border_edit"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editTextSix"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/white_border_edit"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:text="@string/didnt_rec_code"
            android:gravity="center"
            android:textSize="12sp"
            android:padding="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/pls_wait"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:id="@+id/timer"
                tools:text="0:30"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resendOtpButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/resend_otp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@drawable/elevated_button"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>

