<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PickupAgentDetailActivity"
    android:background="@color/divider_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/product_logo" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:includeFontPadding="true"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>

            <RatingBar
                android:id="@+id/pickup_boy_rating"
                style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:numStars="5"
                android:scaleX="1"
                android:scaleY="1"
                android:theme="@style/RatingBar" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/pickUp_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/secondary_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_pickups"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/total_pickups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/secondary_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_picked_up"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:id="@+id/total_weight_picked"
            android:textColor="@color/secondary_text"/>

    </LinearLayout>
</ScrollView>